# commonroad-drivability-checker

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Contributors.txt  LICENSE  MANIFEST.in  README.md  README_FOR_DEVELOPERS.md  build.sh  notes.txt  pyproject.toml  requirements.txt  setup.py  setup_options.py  test_requirements.txt
cpp/: CMakeLists.txt  Readme.txt
cpp/cmake/: DrivabilityCheckerConfig.cmake.in
cpp/collision/: CMakeLists.txt
cpp/collision/include/collision/: application.h  application_settings.h  collision_checker.h  collision_object.h  collision_object_ex.h  collision_object_types.h  i_collision_checker.h  line_segment.h  raytrace_primitive.h  raytrace_utils.h  shape_group.h  time_variant_collision_object.h  truck.h
cpp/collision/include/collision/narrowphase/: polygon.h  rectangle_obb.h  triangle.h  utils.h
cpp/collision/include/collision/serialize/: broadphase_failure_cc_obj_export.h  broadphase_failure_obj_obj_export.h  collision_object_export_s11.h  polygon_export.h  serialize.h  serialize_reg_impl.h  shape_export.h  sphere_export.h  truck_export.h  tv_object_export.h
cpp/collision/include/collision/solvers/: collision_queries.h  collision_solver_fcl.h  collision_solvers.h  (+3 more)
cpp/collision/src/: collision_checker.cc  collision_object.cc  raytrace_primitive.cc  raytrace_utils.cc  shape_group.cc  time_variant_collision_object.cc  truck.cc
cpp/collision/src/narrowphase/: point.cc  polygon.cc  rectangle_aabb.cc  shape.cc  sphere.cc  triangle.cc
cpp/collision/src/serialize/: serialize.cc  serialize_container_cc_obj.cc  serialize_container_obj_obj.cc  serialize_polygon.cc  serialize_rectangle_obb.cc  serialize_shape_group.cc  serialize_sphere.cc  serialize_triangle.cc  serialize_truck.cc
cpp/collision/src/solvers/: collision_solver_default.cc  collision_solver_fcl.cc  collision_solver_primitive.cc  distance_queries.cc  geometry_queries.cc  trajectory_queries.cc
cpp/collision/tests/online_tests/: broadphase_test.cc
cpp/geometry/: CMakeLists.txt  application_settings.h  curvilinear_coordinate_system.cc  curvilinear_coordinate_system.h  segment.cc  segment.h  util.cc  util.h
cpp/geometry/include/geometry/: application_settings.h  curvilinear_coordinate_system.h  segment.h
cpp/geometry/serialize/: serialize.h  serialize_curvil_cs.cc
cpp/geometry/serialize/public/: serialize_public.cc
cpp/geometry/src/: curvilinear_coordinate_system.cc  segment.cc  util.cc
cpp/geometry/src/serialize/: serialize_curvil_cs.cc
cpp/include/collision/: application.h  application_settings.h  collision_checker.h  collision_object.h  collision_object_ex.h  collision_object_types.h  i_collision_container.h  i_collision_object_export.h  primitive_collision_checker.h  raytrace_utils.h  shape_group.h  time_variant_collision_object.h
cpp/include/collision/narrowphase/: point.h  polygon.h  rectangle_aabb.h  rectangle_obb.h  shape.h  sphere.h  triangle.h
cpp/include/collision/serialize/: broadphase_failure_cc_obj_export.h  broadphase_failure_export.h  collision_checker_export.h  i_collision_checker_export.h  point_export.h  rectangle_aabb_export.h  rectangle_obb_export.h  serialize.h  serialize_reg_impl.h  shape_group_export.h  triangle_export.h  vector2d_export.h  vector2d_export_streams.h
cpp/include/collision/solvers/: collision_requests.h  collision_solver_primitive.h  collision_solvers.h  distance_queries.h  distance_requests.h  primitive_collision_queries.h
cpp/include/collision/tests/: broadphase_test.h  collision_tests.h
cpp/python_binding/: CMakeLists.txt
cpp/python_binding/src/: module_collision.cc  module_geometry.cc
cpp/src/: collision_checker.cc  collision_object.cc  collision_object_ex.cc  primitive_collision_checker.cc  time_variant_collision_object.cc
cpp/src/narrowphase/: polygon.cc  rectangle_aabb.cc  rectangle_obb.cc  shape.cc  sphere.cc  triangle.cc
cpp/src/plugins/triangulation/: triangulate.cc
cpp/src/serialize/: serialize_collision_checker.cc  serialize_container_cc_obj.cc  serialize_point.cc  serialize_polygon.cc  serialize_rectangle_aabb.cc  serialize_tv_object.cc
cpp/src/serialize/public/: serialize_public.cc
cpp/src/solvers/: collision_queries.cc  collision_solver_default.cc  collision_solver_primitive.cc  distance_queries.cc  geometry_queries.cc  trajectory_queries.cc
cpp/src/solvers/boost/: boost_collision_object.cc  boost_collision_queries.cc  boost_geometry_queries.cc  solver_entity_boost.cc
cpp/src/solvers/detail/: collision_containers.cc
cpp/src/solvers/fcl/: fcl_broadphase_manager_factories.cc  fcl_collision_object.cc  fcl_collision_object_group.cc  fcl_collision_queries.cc  fcl_collision_requests.cc  fcl_entity_factory.cc  performance_timers.cc
cpp/src/tests/online_tests/: broadphase_test.cc  broadphase_test2.cc  test_common.cc
cpp/tests/: CMakeLists.txt
cpp/tests/collision/offline_tests/: collision_stability_tests.cc  collision_tests.cc  collision_unit_tests.cc
cpp/tests/collision/online_tests/: broadphase_test.cc  broadphase_test.h  collision_tests.h  test_common.cc  test_common.h
cpp/tests/offline_tests/: collision_stability_tests.cc  collision_tests.cc  collision_tests.h  collision_unit_tests.cc
doc/: 00_getting_started.nblink  01_python_wrapper.nblink  02_commonroad_interface.nblink  03_commonroad_road_compliance_checking.nblink  03_road_compliance_checking.nblink  04_feasibility_checker.nblink  05_collision_checks_dynamic_obstacles.nblink  06_curvilinear_coordinate_system.nblink  07_cost_functions.nblink  CMakeLists.txt  Doxyfile.in  MainPage.md  api.rst  api_boundary.rst  api_collision.rst  api_costs.rst  api_cpp.rst  api_feasibility.rst  api_pythonbindings.rst  api_pythonbindings_collision.rst  api_pythonbindings_geometry.rst  conf.py  dependencies.rst  gettingStarted.rst  index.rst  installation.rst  installation_cpp.rst  overview.rst
python_binding/: CMakeLists.txt  pybind.cc  pybind.h  pybind_shapes.cc  pybind_shapes.h  pybind_test.cc  pybind_test.h  pybind_util.cc  pybind_util.h
python_binding/src/: module_collision.cc  module_geometry.cc  submodule_util.h
(+26557 files in other folders)
