[project]
name = "commonroad-drivability-checker"
requires-python = ">=3.10,<3.14"
version = "2025.3.0"
description = "Drivability checker for CommonRoad scenarios."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.txt" }
authors = [
    { name = "Cyber-Physical Systems Group - Technical University of Munich", email = "commonroad@lists.lrz.de" }
]

classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

dependencies = [
    "commonroad-io (>=2023.1, <2025.0)",
    "commonroad-vehicle-models (>=3.0.0, <4.0.0)",
    "numpy (>=1.20, <3.0)",
    "scipy (>=1.7.0, <2.0)",
    "polygon3 (>=3.0.8, <4.0.0)",
    "shapely (>=2.0.0, <3.0.0)",
    "matplotlib (>=3.2.2, <4.0.0)",
]

[project.urls]
Homepage = "https://commonroad.in.tum.de/tools/drivability-checker"
Documentation = "https://cps.pages.gitlab.lrz.de/commonroad-drivability-checker/"
Source = "https://github.com/CommonRoad/commonroad-drivability-checker"

[project.optional-dependencies]
clcs = [
    "commonroad-clcs (>=2025.1.0, <2026.0.0)",
]
triangle = [
    "triangle>=20250106",
]
test = [
    "pytest>=5.3.2",
]
docs = [
    "sphinx_rtd_theme>=0.4.3",
    "sphinx>=3.0.3",
    "nbsphinx_link>=1.3.0",
    "nbsphinx>=0.6.1",
    "breathe>=4.18.0",
    "ipython>=8.36.0",
    "cmake (>=3.24, <4.0)",
]
build = [
    "scikit-build-core~=0.11.0",
    "nanobind~=2.2.0",
    "pathspec>=0.12.1",
    "pyproject-metadata>=0.7.1",
    "typing_extensions~=4.12.2",
    "cmake (>=3.24, <4.0)",
]

[build-system]
requires = [
    "scikit-build-core~=0.11.0",
    "nanobind~=2.2.0",
    "typing_extensions~=4.12.2",
    "cmake (>=3.24, <4.0)",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["commonroad_dc"]
build-dir = "build/{build_type}_{wheel_tag}"
install.components = ["pycrcc"]

minimum-version = "0.8"
cmake.version = ">=3.24"

[tool.scikit-build.cmake.define]
CR_DC_BUILD_PYTHON_BINDINGS = "ON"

[tool.cibuildwheel]
# Skip PyPy and musllinux builds
skip = ["pp*", "*-musllinux*"]
archs = ["x86_64"]
environment = { PIP_DISABLE_PIP_VERSION_CHECK = "1" }
build-verbosity = 1

test-skip = "*i686 *-musllinux*"
test-extras = ["test"]
test-command = "cd {package}/tests && python run_tests.py"
